--- a/README
+++ b/README
@@ -4,3 +4,7 @@ Initial version. No guarantees!
 Some icon bugs currently but does not prevent use.
 
 Strongly recommend placing htaccess passwd file outside of public_html directory if possible. Passwd file generators can be found on-line.
+
+TODO:
+- Verify graphics works
+- Verify flags works
